Add OpenF1 API Service

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+
+      :root {
+        --bt-blue-one: #5DD2FE;
+        --bt-blue-two: #006594;
+        --bt-blue-three: #010e14;
+        --bt-grey-one: #4A5A67;
+        --bt-grey-two: #CCCCCC;
+        --bt-white: #E6E6E6;
+        --bt-black: #0C1921;
+      }
+    </style>
+    <title>F1 Insights Hub</title>
   </head>
   <body>
     <div id="root"></div>
